Functional organisation search

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -403,6 +403,12 @@ a {
   z-index: 1;
   width: 100%;
   margin-bottom: $unit*1.5;
+  .mdc-card__info--organisation-title {
+    padding: $unit;
+  }
+  .mdc-card__media--organisation {
+    margin-right: $unit;
+  }
   .search-result-article__snippet {
     padding: $unit;
     background-color: $mdc-theme-primary-light;
