--- a/db/configurations/goodmoves/templates/jobs/search-foot.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search-foot.hbs
@@ -1,4 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+<script src="/assets/js/goodmoves/search.js" async defer></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJdxcQpVKQ6HdrjnPXycUoZqsmp-Ep3l0&libraries=places&region=uk&callback=initMap" async defer></script>
 <script>
 var terms = {
