Browse by categories on home page

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -468,7 +468,7 @@ a {
   }
   .mdc-card__info--vacancy .detailed-info,
   .organisation-type {
-    margin: 0 0 $unit;
+    margin: $unit/2 0 $unit;
     small {
       font-size: 0.92rem;
     }
@@ -512,6 +512,7 @@ a {
   .mdc-card--full-content {
     border-top: none;
     .key-info-extra {
+      margin-top: $unit*1.5;
       padding: $unit;
       background-color: $mdc-theme-primary-light;
     }
@@ -765,7 +766,7 @@ body {
     flex-direction: column;
     padding: 0 $unit/2;
     .mdc-card__info--vacancy-title {
-      margin: $unit/2 0;
+      margin: $unit/2 0 $unit*(3/4);
       a .top-job {
         margin-left: 0;
         margin-right: .2rem;
@@ -864,6 +865,9 @@ body {
 .mdc-typography--headline4,
 .mdc-typography--headline5 {
   margin-bottom: $unit;
+}
+.search-form .mdc-typography--headline5 {
+  margin-top: $unit*1.5;
 }
 .gm-style .gm-style-iw {
   font-size: 0.9rem;
