--- a/db/configurations/goodmoves/templates/pages/home-foot.hbs
+++ b/db/configurations/goodmoves/templates/pages/home-foot.hbs
@@ -13,6 +13,11 @@ var terms = {
     { field: 'roles', term: {{{stringify key}}} },
     {{/each ~}}
   ],
+  regions: [
+    {{#each data.supplimentaryResponses.types.aggregations.regions.buckets ~}}
+    { field: 'regions', term: {{{stringify key}}} },
+    {{/each ~}}
+  ],
   role_status: [
     {{#each data.supplimentaryResponses.types.aggregations.role_status.buckets ~}}
     { field: 'role_status', term: {{{stringify key}}} },
