--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -12,6 +12,10 @@
             <span class="far fa-search mdc-list-item__graphic" title="Jobs"></span>
             Jobs
           </a>
+          <a class="mdc-tab" onclick="searchViewCategories()">
+            <span class="far fa-list-alt mdc-list-item__graphic" title="Categories"></span>
+            Categories
+          </a>
           <a class="mdc-tab" onclick="searchViewOrganisations()">
             <span class="far fa-building mdc-list-item__graphic" title="Organisations"></span>
             Organisations
@@ -79,6 +83,80 @@
             </div>
           </form>
         </div>
+        <div id="search-view-categories" class="search-form" style="display: none;">
+          <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="browse-title mdc-typography--headline5">
+                  Jobs by sector
+                </div>
+                <ul class="mdc-list">
+                  {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
+                  <li class="mdc-list-item">
+                    <span class="mdc-list-item__text">
+                      <a href="/search?sector={{itemAt ../../../sectors_slugs.buckets @index}}">{{key}}</a>
+                    </span>
+                    <span class="mdc-list-item__meta">
+                      {{doc_count}}
+                    </span>
+                  </li>
+                  {{/each ~}}
+                </ul>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="browse-title mdc-typography--headline5">
+                  Jobs by role
+                </div>
+                <ul class="mdc-list">
+                  {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
+                  <li class="mdc-list-item">
+                    <span class="mdc-list-item__text">
+                      <a href="/search?role={{itemAt ../../../roles_slugs.buckets @index}}">{{key}}</a>
+                    </span>
+                    <span class="mdc-list-item__meta">
+                      {{doc_count}}
+                    </span>
+                  </li>
+                  {{/each ~}}
+                </ul>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="browse-title mdc-typography--headline5">
+                  Jobs by region
+                </div>
+                <ul class="mdc-list">
+                  {{#each data.supplimentaryResponses.types.aggregations.regions.buckets ~}}
+                  <li class="mdc-list-item">
+                    <span class="mdc-list-item__text">
+                      <a href="/search?region={{itemAt ../../../regions_slugs.buckets @index}}">{{key}}</a>
+                    </span>
+                    <span class="mdc-list-item__meta">
+                      {{doc_count}}
+                    </span>
+                  </li>
+                  {{/each ~}}
+                </ul>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="browse-title mdc-typography--headline5">
+                  Jobs by status
+                </div>
+                <ul class="mdc-list">
+                  {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
+                  <li class="mdc-list-item">
+                    <span class="mdc-list-item__text">
+                      <a href="/search?status={{itemAt ../../../statuses_slugs.buckets @index}}">{{key}}</a>
+                    </span>
+                    <span class="mdc-list-item__meta">
+                      {{doc_count}}
+                    </span>
+                  </li>
+                  {{/each ~}}
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
         <div id="search-view-organisations" class="search-form" style="display: none;">
           <form action="/organisations" method="get">
             <div class="mdc-layout-grid">
@@ -135,39 +213,39 @@
     </div>
 
     <div class="mdc-layout-grid home-jobs">
-    <!-- <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
-    <div class="mdc-typography--headline5 v-margin-full">
-    Your saved searches (if authenticated)
-    </div>
-    </div>
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
-    <div class="mdc-typography--headline5 v-margin-full">
-    Your shortlist (if authenticated)
-    </div>
-    </div>
-    </div> -->
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full latest-jobs">
-        <div class="mdc-typography--headline5 v-margin-full">
-          Latest jobs
-        </div>
-        {{#each data.primaryResponse.hits.hits ~}}
-        {{> vacancy_search_result _source}}
-        {{/each ~}}
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full top-jobs">
-        <div class="mdc-typography--headline5 v-margin-full">
-          Top jobs
-        </div>
-        {{#each data.supplimentaryResponses.top.hits.hits ~}}
-        {{> vacancy_search_result _source}}
-        {{/each ~}}
-      </div>
+      <!-- <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+      <div class="mdc-typography--headline5 v-margin-full">
+      Your saved searches (if authenticated)
     </div>
   </div>
+  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+  <div class="mdc-typography--headline5 v-margin-full">
+  Your shortlist (if authenticated)
+</div>
+</div>
+</div> -->
+<div class="mdc-layout-grid__inner">
+  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full latest-jobs">
+    <div class="mdc-typography--headline5 v-margin-full">
+      Latest jobs
+    </div>
+    {{#each data.primaryResponse.hits.hits ~}}
+    {{> vacancy_search_result _source}}
+    {{/each ~}}
+  </div>
+  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full top-jobs">
+    <div class="mdc-typography--headline5 v-margin-full">
+      Top jobs
+    </div>
+    {{#each data.supplimentaryResponses.top.hits.hits ~}}
+    {{> vacancy_search_result _source}}
+    {{/each ~}}
+  </div>
+</div>
+</div>
 
-  {{> tfn_latest}}
+{{> tfn_latest}}
 
-  {{> currently_recruiting}}
+{{> currently_recruiting}}
 </div>
