Static content mockup

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -216,6 +216,16 @@ footer h3,
   border-right: none;
   background-color: white !important;
 }
+
+.goodmoves-page {
+  margin: $unit*1.5 0;
+  .mdc-card {
+    padding: $unit;
+    .x-items {
+      margin-top: 0;
+    }
+  }
+}
 .goodmoves-job,
 .goodmoves-related-jobs {
   margin-bottom: $unit*2.5;
@@ -247,6 +257,9 @@ footer h3,
   .x-item {
     line-height: 0;
     align-items: flex-start;
+  }
+  .x-item:hover {
+    text-decoration: none;
   }
   .x-item-side {
     display: inline-flex;
@@ -868,6 +881,7 @@ body {
 }
 .search-form .mdc-typography--headline5 {
   margin-top: $unit*1.5;
+  margin-left: $unit;
 }
 .gm-style .gm-style-iw {
   font-size: 0.9rem;
