--- a/db/configurations/goodmoves/partials/tfn-latest.hbs
+++ b/db/configurations/goodmoves/partials/tfn-latest.hbs
@@ -14,7 +14,7 @@
         </div>
       </div>
       <p class="mdc-typography--body1">
-        <a href="http://thirdforcenews.org.uk/tfn-news?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Read all the latest news from TFN</a>&ensp;<a href="http://thirdforcenews.org.uk/signup?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Subscribe to TFN</a>
+        <a href="http://thirdforcenews.org.uk/tfn-news?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Read all the latest news from TFN</a>&emsp;<a href="http://thirdforcenews.org.uk/signup?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Subscribe to TFN</a>
       </p>
     </div>
   </div>
