Tidying up and fixing bugs

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -258,14 +258,14 @@ footer h3,
     line-height: 0;
     align-items: flex-start;
   }
-  .x-item:hover {
-    text-decoration: none;
-  }
   .x-item-side {
     display: inline-flex;
     align-items: center;
     width: 100%;
     justify-content: center;
+  }
+  .x-item-side:hover {
+    text-decoration: none;
   }
 }
 // .container-content-home {
