--- a/db/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/db/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -2,8 +2,8 @@
 <div class="mdc-form-field">
   <div class="mdc-checkbox">
     <input type="checkbox" class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{key}}"
-      name="{{field}}[]" value="{{key}}" onchange="$('#{{instance_id}}-search-submit').click()"
-      {{#if (contains selected key)}}checked{{/if}} />
+    name="{{field}}[]" value="{{key}}" onchange="$('#{{instance_id}}-search-submit').click()"
+    {{#if (contains selected key)}}checked{{/if}} />
     <div class="mdc-checkbox__background">
       <svg class="mdc-checkbox__checkmark"
       viewBox="0 0 24 24">
@@ -33,7 +33,7 @@
       </a>
       <span class="mdc-tab-bar__indicator"></span>
     </div>
-    <form action="/search" method="GET">
+    <form action="/search" method="GET" class="search-form">
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
@@ -48,7 +48,7 @@
       <div class="h-padding">
         <div class="mdc-layout-grid">
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                 <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
                 <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.location}}" placeholder="">
@@ -58,20 +58,18 @@
                 <div class="mdc-line-ripple"></div>
               </div>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
-              <div class="mdc-select mdc-select--box">
-                <div class="mdc-select" data-mdc-auto-init="MDCSelect">
-                  <select class="mdc-select__native-control" id="{{instance_id}}-distance" name="distance">
-                    <option value="8046.72" {{#compare request.params.query.distance "8046.72"}}selected{{/compare}}>5 miles</option>
-                    <option value="16093.44" {{#compare request.params.query.distance "16093.44"}}selected{{/compare}}>10 miles</option>
-                    <option value="40233.6" {{#compare request.params.query.distance "40233.6"}}selected{{/compare}}>25 miles</option>
-                    <option value="80467.2" {{#compare request.params.query.distance "80467.2"}}selected{{/compare}}>50 miles</option>
-                    <option value="any">no limit</option>
-                  </select>
-                  <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-distance">
-                    Distance
-                  </label>
-                </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+                <select class="mdc-select__native-control" id="{{instance_id}}-distance" name="distance">
+                  <option value="8046.72" {{#compare request.params.query.distance "8046.72"}}selected{{/compare}}>5 miles</option>
+                  <option value="16093.44" {{#compare request.params.query.distance "16093.44"}}selected{{/compare}}>10 miles</option>
+                  <option value="40233.6" {{#compare request.params.query.distance "40233.6"}}selected{{/compare}}>25 miles</option>
+                  <option value="80467.2" {{#compare request.params.query.distance "80467.2"}}selected{{/compare}}>50 miles</option>
+                  <option value="any" {{#compare request.params.query.distance "any"}}selected{{/compare}}>no limit</option>
+                </select>
+                <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-distance">
+                  Within
+                </label>
               </div>
             </div>
           </div>
