--- a/db/configurations/goodmoves/templates/jobs/search-json.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search-json.hbs
@@ -1,5 +1,5 @@
 {
-  "detailed_results": {{{stringify (component "search_results" this)}}},
+  "detailed_results": {{{stringify (component "vacancy_search_results" this)}}},
   "map_results": {
     "total": {{data.search_data.map_results.hits.total}},
     "hits":[
