--- a/db/configurations/goodmoves/templates/organisations/organisation.hbs
+++ b/db/configurations/goodmoves/templates/organisations/organisation.hbs
@@ -56,7 +56,7 @@
   {{#if goodhq_organisation.xid}}
   <hr />
   <div class="mdc-typography--headline4">
-    Find out more about <a href="https://goodhq.org/{{xid}}">{{{organisation.title}}} on Good HQ</a>
+    Find out more about <a href="https://goodhq.org/{{xid}}">{{{organisation.title}}}</a> on <a href="https://goodhq.org">Good HQ</a>
   </div>
   {{#compare ../data.goodhq.volunteering.hits.total ">" 0 ~}}
   <div class="mdc-typography--headline5">
