--- a/db/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/db/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -37,7 +37,7 @@
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.keywords}}">
+          <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.keywords}}" data-lpignore="true" autocomplete="off">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
             Keywords
           </label>
@@ -51,7 +51,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                 <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
-                <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.location}}" placeholder="">
+                <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.location}}" placeholder="" data-lpignore="true">
                 <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">
                   Location
                 </label>
@@ -82,7 +82,7 @@
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-arrow-alt-from-left mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
+          <input type="text" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}" data-lpignore="true">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">
             Minimum salary
           </label>
@@ -93,7 +93,7 @@
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-arrow-alt-to-right mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
+          <input type="text" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}" data-lpignore="true">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">
             Maximum salary
           </label>
