basic to essential digital skills text changes

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -274,8 +274,8 @@ a {
 .stories.cre8te-opportunites,
 .stories.glasgow-life,
 .stories.queens-cross,
-.skill-up.managing-information,
 .skill-up.communicating,
+.skill-up.handling-info,
 .skill-up.transacting,
 .skill-up.problem-solving,
 .skill-up.creating {
@@ -647,6 +647,11 @@ main {
                 font-weight: normal;
             }
         }
+    }
+    .skills.expand {
+      p {
+        padding-left: 2rem;
+      }
     }
     .pledges h1 {
         margin-top: 10.4rem;
