--- a/db/configurations/digitalparticipation/templates/resources-detail.hbs
+++ b/db/configurations/digitalparticipation/templates/resources-detail.hbs
@@ -238,7 +238,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <hr class="margin-bottom" />
 
-        <p>The following sites will help you get online and develop your own basic digital skills.</p>
+        <p>The following sites will help you get online and develop your own essential digital skills.</p>
 
         <h4><a href="http://letsgetonline.scot/">Let's Get Online</a></h4>
         <p>Find help and computer courses near you in Scotland</p>
