--- a/db/configurations/digitalparticipation/templates/resources.hbs
+++ b/db/configurations/digitalparticipation/templates/resources.hbs
@@ -12,7 +12,7 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <hr class="margin-bottom" />
 
-      <h3>Need help to get online and develop your own basic digital skills?</h3>
+      <h3>Need help to get online and develop your own essential digital skills?</h3>
       <h4>
         <a href="/resources/support">
           Find support near you and online
@@ -21,7 +21,7 @@
       </h4>
       <hr />
 
-      <h3>Want to help others develop their basic digital skills?</h3>
+      <h3>Want to help others develop their essential digital skills?</h3>
       <h4>
         <a href="/resources/help-others">
           Get support to be a digital champion
