--- a/db/configurations/digitalparticipation/templates/skill-up.hbs
+++ b/db/configurations/digitalparticipation/templates/skill-up.hbs
@@ -1,21 +1,21 @@
 <div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner title">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone">
-      <h1>Back The Basics</h1>
+      <h1>The Essentials</h1>
       <p>
-        Basic digital skills can mean different things to different folk.
+        Essential digital skills can mean different things to different folk.
         From learning new skills to access on-line services to developing
-        your staff and driving your company. Our framework for basic digital
+        your staff and driving your company. Our framework for essential digital
         skills is a handy tool to kickstart your thinking on how you might
         begin to put your digital charter pledges into action.
       </p>
-      <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img hide-on-med-and-up" />
+      <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="The Essentials illustration" class="responsive-img hide-on-med-and-up" />
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-2-tablet">
       &nbsp;
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img" />
+      <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="The Essentials illustration" class="responsive-img" />
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet">
       &nbsp;
@@ -45,25 +45,24 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
       <h3>
-        Managing Info
+        Communicating
       </h3>
     </div>
     <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
       <h3>
-        <a href="skill-up/managing-information">
+        <a href="skill-up/communicating">
           <i class="fa fa-plus-circle" aria-hidden="true"></i>
         </a>
       </h3>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
       <p>
-        Think about the ways in which you could improve your skills &amp;
-        capabilities to find, manage and store digital information.
+        Communicate, collaborate, and share
       </p>
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
       <h3>
-        <a href="skill-up/managing-information">
+        <a href="skill-up/communicating">
           <i class="fa fa-plus-circle" aria-hidden="true"></i>
         </a>
       </h3>
@@ -80,25 +79,24 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
       <h3>
-        Communicating
+        Handling information and content
       </h3>
     </div>
     <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
       <h3>
-        <a href="skill-up/communicating">
+        <a href="skill-up/handling-info">
           <i class="fa fa-plus-circle" aria-hidden="true"></i>
         </a>
       </h3>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
       <p>
-        Look at improvements to the ways in which you communicate,
-        interact, collaborate and connect with others.
+        Find, manage and store digital information and content securely
       </p>
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
       <h3>
-        <a href="skill-up/communicating">
+        <a href="skill-up/handling-info">
           <i class="fa fa-plus-circle" aria-hidden="true"></i>
         </a>
       </h3>
@@ -127,8 +125,7 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
       <p>
-        How might you better sell &amp; purchase goods, organise
-        finances and make use of digital government services.
+        Register and apply for services, buy and sell goods and services, and administer and manage transactions online
       </p>
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
@@ -150,7 +147,7 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
       <h3>
-        Problem Solving
+        Problem solving
       </h3>
     </div>
     <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
@@ -162,8 +159,7 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
       <p>
-        Uncover new ways to use digital tools to solve problems and
-        find solutions - increasing independence and confidence
+        Find solutions to problems using digital tools and online services
       </p>
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
@@ -185,25 +181,24 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
       <h3>
-        Creating
+        Being safe and legal online
       </h3>
     </div>
     <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
       <h3>
-        <a href="skill-up/creating">
+        <a href="skill-up/safety">
           <i class="fa fa-plus-circle" aria-hidden="true"></i>
         </a>
       </h3>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
       <p>
-        Discover new and improved ways to make connections and engage
-        with people through the creation of digital content.
+        Aware of how all digital activity leaves a trace online; identify malicious websites and associated scams; manage passwords well to avoid identity and data theft
       </p>
     </div>
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
       <h3>
-        <a href="skill-up/creating">
+        <a href="skill-up/safety">
           <i class="fa fa-plus-circle" aria-hidden="true"></i>
         </a>
       </h3>
@@ -223,16 +218,16 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
       <h1>Why It Matters?</h1>
       <p>
-        Across Scotland, around 800,000 adults don’t have the basic digital skills they need to use the internet effectively. If this were just a case of missing out on a few distracting websites and celebrity tweets then we might think nothing more of it. But the stakes are so much higher. Amongst other things, the internet helps people keep in touch, learn new things, save money, find work and stay healthy. For some people it’s been a genuine life saver. These things matter to everyone, and they should be for everyone.
+        Across Scotland, around 800,000 adults don’t have the essential digital skills they need to use the internet effectively. If this were just a case of missing out on a few distracting websites and celebrity tweets then we might think nothing more of it. But the stakes are so much higher. Amongst other things, the internet helps people keep in touch, learn new things, save money, find work and stay healthy. For some people it’s been a genuine life saver. These things matter to everyone, and they should be for everyone.
       </p>
       <p>
-        Research shows that the people offline are more likely to be facing other forms of exclusion and inequality. They may be older, have a disability or low income. Evidence also tells us that developing the motivation and skills are just as important as enabling access to equipment and broadband connections. Supporting more people to go online and develop basic digital skills is crucial to ensure existing inequalities are not increased.
+        Research shows that the people offline are more likely to be facing other forms of exclusion and inequality. They may be older, have a disability or low income. Evidence also tells us that developing the motivation and skills are just as important as enabling access to equipment and broadband connections. Supporting more people to go online and develop essential digital skills is crucial to ensure existing inequalities are not increased.
       </p>
       <p>
         Digital is also becoming increasingly seen as a primary route for engagement and activity across government and business. UK, national and local government are investing significantly in enhancing digital infrastructure and making public services ‘digital first’. This not only helps to meet citizens’ expectations of how they should be able to engage with services in the Internet era, but also offers big opportunities to reduce costs while increasing efficiency and effectiveness.
       </p>
       <p>
-        So the need for investment in basic digital skills for everyone is clear. We want Scotland to become a world-leading digital nation by 2020 – and we’re asking you to join us in making that happen.
+        So the need for investment in essential digital skills for everyone is clear. We want Scotland to become a world-leading digital nation by 2020 – and we’re asking you to join us in making that happen.
       </p>
     </div>
   </div>
