--- a/db/configurations/scvo/templates/pages/page-digital.hbs
+++ b/db/configurations/scvo/templates/pages/page-digital.hbs
@@ -80,7 +80,7 @@
               </section>
               <section class="mdc-card__supporting-text">
                 <p>
-                  One in five people lack basic digital skills.
+                  One in five people lack essential digital skills.
                   Confidence, access and affordability can also prevent people benefiting from being online.
                 </p>
               </section>
@@ -99,7 +99,7 @@
               </section>
               <section class="mdc-card__supporting-text">
                 <p>
-                  Can you play a role in building people's confidence and basic digital skills?
+                  Can you play a role in building people's confidence and essential digital skills?
                   Can you help tackle the issues of accessibility or affordability?
                 </p>
               </section>
