--- a/db/configurations/digitalparticipation/templates/home.hbs
+++ b/db/configurations/digitalparticipation/templates/home.hbs
@@ -12,7 +12,7 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <hr />
       <h2>
-        We are on a mission: to give everyone in Scotland the basic digital
+        We are on a mission: to give everyone in Scotland the essential digital
         skills they need to do their jobs, live their lives, and confidently use
         different digital services. To do this, we need your help&hellip;
       </h2>
@@ -69,7 +69,7 @@
       <h4>
         <a href="/skill-up">
           <span class="text">
-            Uncover what basic digital skills might mean for your organisation
+            Uncover what essential digital skills might mean for your organisation
           </span>
           <i class="material-icons">arrow_forward</i>
         </a>
