--- a/db/configurations/digitalparticipation/templates/the-charter.hbs
+++ b/db/configurations/digitalparticipation/templates/the-charter.hbs
@@ -44,7 +44,7 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
       <p>
         We ensure that our staff &amp; volunteers have the opportunity
-        to develop basic digital skills.
+        to develop essential digital skills.
       </p>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -64,7 +64,7 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
       <p>
-        We support our staff &amp; volunteers to help others learn basic
+        We support our staff &amp; volunteers to help others learn essential
         digital skills and embrace digital tools.
       </p>
     </div>
@@ -101,13 +101,13 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
       <h3>
-        Back the Basics
+        The Essentials
       </h3>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
       <p>
         We support a common language based on digital participation and
-        basic digital skills to make our thinking and actions as clear
+        essential digital skills to make our thinking and actions as clear
         as possible.
       </p>
     </div>
