Search results list styling

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -232,8 +232,15 @@ footer h3,
 }
 .goodmoves-job-search {
   .head {
+    margin-bottom: $unit/2;
     .mdc-select {
       margin-top: 0;
+    }
+    .mdc-button.save-search {
+      margin-top: $unit;
+    }
+    .pagination {
+      margin-top: $unit*1.25;
     }
   }
 }
@@ -374,7 +381,7 @@ a {
 }
 
 .search-info {
-  margin: $unit*1.5 0 $unit;
+  margin: $unit*1.5 0 $unit*(3/4);
   background: white;
   color: $mdc-theme-secondary;
   padding: $unit/3 $unit/2;
