--- a/db/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/db/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -5,7 +5,7 @@
 <div class="mdc-layout-grid head">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="#" class="mdc-button mdc-button--raised">
+      <a href="/saved-searches" class="mdc-button mdc-button--raised save-search">
         <span class="far fa-cog fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
         Save search
       </a>
