Added category tags

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -387,6 +387,9 @@ a {
   padding: $unit/3 $unit/2;
   box-sizing: border-box;
 }
+.goodmoves-organisation-search .search-info {
+  margin-bottom: $unit*1.5;
+}
 
 .mdc-card {
   .mdc-card__contents {
@@ -532,9 +535,21 @@ a {
   .mdc-card--full-content {
     border-top: none;
     .key-info-extra {
-      margin-top: $unit*1.5;
+      // margin-top: $unit*1.5;
       padding: $unit;
       background-color: $mdc-theme-primary-light;
+      .mdc-chip {
+        margin-bottom: $unit/4;
+        padding: $unit/5 $unit/2;
+        vertical-align: top;
+        font-weight: 600;
+        background-color: $mdc-theme-primary;
+      }
+      .mdc-chip:hover {
+        text-decoration: none;
+        color: white;
+        background-color: $mdc-theme-primary-dark;
+      }
     }
     .detailed-info {
       padding: $unit;
