--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -34,6 +34,21 @@
               {{{benefits}}}
             </li>
             {{/if ~}}
+            {{#ifAny sectors roles ~}}
+            <li class="mdc-card__info--vacancy-website mdc-typography--body1">
+              <span class="fa-li"><span class="far fa-tags fa-fw" title="Roles"></span></span>
+              {{#each sectors ~}}
+              <a href="/search?sector={{urlencode this}}" class="mdc-chip">
+                {{this}}
+              </a>
+              {{/each ~}}
+              {{#each roles ~}}
+              <a href="/search?role={{urlencode this}}" class="mdc-chip">
+                {{this}}
+              </a>
+              {{/each ~}}
+            </li>
+            {{/ifAny ~}}
             {{#if reference_number ~}}
             <li class="mdc-card__info--vacancy-reference mdc-typography--body1">
               <span class="fa-li"><span class="far fa-hashtag fa-fw" title="Reference"></span></span>
