Vacancy detail page alterations

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -402,10 +402,15 @@ a {
     margin: 0;
   }
   .mdc-card__actions {
+    background-color: $mdc-theme-primary;
     min-height: auto;
+    a {
+      color: white;
+    }
     .mdc-card__action {
       font-weight: 600;
       margin-right: $unit;
+      color: white;
     }
     .mdc-card__action:last-child {
       margin-right: 0;
